<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/contentLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/titleTextView"
                    style="@style/Title.Big.Bold.Black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/title" />

                <TextView
                    android:id="@+id/nameTextView"
                    style="@style/Title.Medium.Bold.Black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/titleTextView"
                    tools:text="@string/name" />

                <TextView
                    android:id="@+id/separation"
                    style="@style/Title.Medium.Bold.Black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="•"
                    app:layout_constraintBottom_toBottomOf="@+id/nameTextView"
                    app:layout_constraintStart_toEndOf="@+id/nameTextView"
                    app:layout_constraintTop_toTopOf="@+id/nameTextView" />

                <TextView
                    android:id="@+id/usernameTextView"
                    style="@style/Title.Medium.Bold.Black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    app:layout_constraintBottom_toBottomOf="@+id/nameTextView"
                    app:layout_constraintStart_toEndOf="@+id/separation"
                    app:layout_constraintTop_toTopOf="@+id/nameTextView"
                    tools:text="@string/username" />

                <TextView
                    android:id="@+id/bodyTextView"
                    style="@style/Title.Medium.Black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nameTextView"
                    tools:text="@string/body" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                style="@style/Subtitle.Black.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/comment" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/commentRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <include
        android:id="@+id/loadingLayout"
        layout="@layout/view_loading"
        android:visibility="gone" />

    <include
        android:id="@+id/errorLayout"
        layout="@layout/view_error"
        android:visibility="gone" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
